@@ -58,6 +58,7 @@ MovieJukebox 2.3 BETA
  - Enhancement  #1804 Adding a property to toggle IMDDB\Sratim cast source.
  - Fixed defect #1810 old-RAR format compatibility fixed
  - Enhancement  #1814 Old RAR support added to RAR library
+ - Fixed defect #1820 Issue with Filmweb plugin (search engine)
 
 MovieJukebox 2.2
 ----------------
